--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tee-rotation",
+  "name": "royal-tee",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.9.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
