--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "royal-tee",
   "private": true,
   "version": "0.9.0",
+  "release": "R001",
   "type": "module",
   "scripts": {
     "dev": "vite",
